--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,9 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=true
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/kickerelo
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
