--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,9 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-# Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
-
-spring.datasource.url=jdbc:mariadb://localhost:3306/kickerelo
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URI}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
