--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <vaadin.version>24.6.6</vaadin.version>
+        <spring.profiles.active>test</spring.profiles.active>
     </properties>
 
     <repositories>
@@ -53,6 +54,11 @@
             <version>3.5.2</version>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
@@ -81,6 +87,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <profiles>
+                        <activeProfiles>${spring.profiles.active}</activeProfiles>
+                    </profiles>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -88,6 +99,9 @@
     <profiles>
         <profile>
             <id>production</id>
+            <properties>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>com.vaadin</groupId>
@@ -120,6 +134,12 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <spring.profiles.active>test</spring.profiles.active>
+            </properties>
         </profile>
     </profiles>
 
