--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+data.mv.db
+src/main/bundles
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
