--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+
+# == OIDC Configuration ==
+spring.security.oauth2.client.registration.oidc.client-id=client-id
+spring.security.oauth2.client.registration.oidc.client-secret=client-secret
+spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
+spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.oidc.issuer-uri=https://auth.fs.cs.uni-frankfurt.de/application/o/oidc/
