--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ target/
 data.mv.db
 src/main/bundles
 
+# for secrets
+.env
+.vscode
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
