--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,9 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # == OIDC Configuration ==
-spring.security.oauth2.client.registration.oidc.client-id=client-id
-spring.security.oauth2.client.registration.oidc.client-secret=client-secret
+spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
+spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
 spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
 spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-spring.security.oauth2.client.provider.oidc.issuer-uri=https://auth.fs.cs.uni-frankfurt.de/application/o/oidc/
+spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
