Add connection to fs auth provider, redirect not tested

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,9 +11,10 @@ spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 # == OIDC Configuration ==
-spring.security.oauth2.client.registration.oidc.client-id=client-id
-spring.security.oauth2.client.registration.oidc.client-secret=client-secret
+spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
+spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
 spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
 spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
 
-spring.security.oauth2.client.provider.oidc.issuer-uri=https://auth.fs.cs.uni-frankfurt.de/application/o/oidc/
+vaadin.urlMapping=/*
