--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,6 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
+logging.level.org.springframework.security=DEBUG
 spring.mustache.check-template-location = false
 
 spring.datasource.url=jdbc:h2:file:./data
@@ -14,5 +15,6 @@ spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
 spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
 spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
 spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-
 spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
+
+vaadin.urlMapping=/app/*
