--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,11 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    target-branch: "develop"
-      
+    target-branch: "master"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
-    target-branch: "develop"
+    target-branch: "master"
+
