Use in-memory database for testing, add test data on startup when in test mode.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+
+# In prod mode, never add the test data to the database
+spring.sql.init.mode=never
