--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,4 +17,4 @@ spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
 spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
 
-vaadin.urlMapping=/*
+vaadin.urlMapping=/app/*
