--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,8 +13,9 @@ spring.jpa.show-sql=true
 # == OIDC Configuration ==
 spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
 spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
-spring.security.oauth2.client.registration.oidc.scope=openid,profile,email
-spring.security.oauth2.client.registration.oidc.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.oidc.scope=openid,email,profile
+spring.security.oauth2.client.registration.oidc.redirect-uri=${OIDC_REDIRECT_URI}
+spring.security.oauth2.client.provider.oidc.jwk-set-uri=${OIDC_JWK_SET_URI}
 spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
 
 vaadin.urlMapping=/app/*
