Add OIDC support (#39)
* Update readme

* First try in oidc implementation

* Add secrets

* Add connection to fs auth provider, redirect not tested

* Working prototype

This commit implements the oidc compatibility with the caveat of having
every subsite under the app path. For that, there is also a redirection
handler to redirect the home page to the app home page.

* Small cleanup

* Fix access even when logged in

* Update application-prod.properties

* Ignore login when in test env

* Fix reviews

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+data.mv.db
+src/main/bundles
+node_modules
+
+# for secrets
+.env
+.vscode
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
