--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,6 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
+logging.level.org.springframework.security=DEBUG
 spring.mustache.check-template-location = false
 
 spring.datasource.driver-class-name=org.h2.Driver
@@ -7,3 +8,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# == OIDC Configuration ==
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+vaadin.urlMapping=/app/*
