--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,11 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # == OIDC Configuration ==
-spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
-spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
-spring.security.oauth2.client.registration.oidc.scope=openid,email,profile
-spring.security.oauth2.client.registration.oidc.redirect-uri=${OIDC_REDIRECT_URI}
-spring.security.oauth2.client.provider.oidc.jwk-set-uri=${OIDC_JWK_SET_URI}
-spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 vaadin.urlMapping=/app/*
