Add access control for entering data

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,13 +2,19 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-spring.datasource.url=${DATABASE_URI}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
+# spring.datasource.url=${DATABASE_URI}
+# spring.datasource.username=${DATABASE_USER}
+# spring.datasource.password=${DATABASE_PASSWORD}
+# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.show-sql=false
+# spring.jpa.open-in-view=false
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # == OIDC Configuration ==
 spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
@@ -21,4 +27,4 @@ spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
 vaadin.urlMapping=/app/*
 
 # In prod mode, never add the test data to the database
-spring.sql.init.mode=never
+# spring.sql.init.mode=never
