--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.jpa.open-in-view=false
 # == OIDC Configuration ==
 spring.security.oauth2.client.registration.oidc.client-id=${OIDC_CLIENT_ID}
 spring.security.oauth2.client.registration.oidc.client-secret=${OIDC_CLIENT_SECRET}
-spring.security.oauth2.client.registration.oidc.scope=openid,email,profile
+spring.security.oauth2.client.registration.oidc.scope=openid,email,profile,offline_access
 spring.security.oauth2.client.registration.oidc.redirect-uri=${OIDC_REDIRECT_URI}
 spring.security.oauth2.client.provider.oidc.jwk-set-uri=${OIDC_JWK_SET_URI}
 spring.security.oauth2.client.provider.oidc.issuer-uri=${OIDC_ISSUER_URI}
